governance-shared/baselines/3.1.1/ChronoPM-Project/references/21-pm-profile-rules.md
---
rule_id: 21
title: PM Profile 用户习惯学习规则
category: 偏好适配
risk_level: 低
depends_on: [00, 06, 10, 17, 20]
version: 1.0
---

# 21 PM Profile 用户习惯学习规则

## 1. 定位与边界

### 1.1 定位

本规则定义 ChronoPM 的 PM Profile（PM 偏好档案）能力，作为 AI 输出行为的个性化配置源。

- PM Profile 是**辅助理解配置数据**，不是事实源
- PM Profile 影响 AI 的**输出格式、交互风格、信息侧重、确认方式**
- PM Profile **不影响**事实源内容准确性、项目事实判断、安全底线、规则优先级
- 本次改造**不删除、不弱化现有能力**

### 1.2 边界

- PM Profile 不修改事实源（todos/ 待办文件等）
- pending 偏好不直接改变 AI 输出行为
- pending 偏好不写入确定事实源
- 低置信度不应用
- confirmed 偏好仅影响"怎么说"和"怎么呈现"，不影响"说什么事实"
- confirmed 偏好不覆盖项目规则（Level 2）
- 用户强制修改也需保留观察记录和 Change Log
- 不新增机器配置字段（学习模式以规则策略描述）

### 1.3 "实时同步记录"定义

- "实时同步记录"指 AI 在正常交互过程中被动观察用户行为，不需要用户手动打开 Profile 文件编辑
- 不等于自动确认：自动发现默认进 pending，需用户确认后升为 confirmed
- "实时"指在每轮交互中自动执行观察和记录，不是事后批量处理
- 已确认允许 AI 自动写入 pending

## 2. 文件位置与加载条件

### 2.1 路径

| 模式 | 路径 |
|---|---|
| 本项目 | `ai/context/pm-profile.md` |

### 2.2 加载时机

- **所有场景必须加载**（与 00 同级），在意图检测前加载 confirmed 偏好
- 加载顺序：20（版本检查）→ 06（项目背景）→ **21（PM Profile）**→ 17（术语归一化）→ 00（意图检测）
- 不存在时跳过：Profile 不存在时完全兼容现有流程

### 2.3 文件创建边界

- 普通业务处理中**不得静默创建** `pm-profile.md`
- 以下场景允许创建：
  - `init_workspace.py`（新工作区初始化时自动创建）
  - `migrate_workspace.py --create-profile`（老工作区升级时补建）
  - 用户明确要求"初始化偏好档案"时
- 创建前必须检查目标路径是否存在
- 已存在时**不得覆盖**
- 创建后记录 Change Log 或迁移日志

### 2.4 姓名字段与"我"的身份推导（v2.0.0 新增）

`pm-profile.md` front matter 包含 `pm_name` 字段（PM 姓名或常用称呼/缩写），用途：

1. **"我"推导**：对话中出现"我""我的待办""给我加个任务"等第一人称时，AI 用 `pm_name` 推导指代对象（匹配待办 Owner、TD 编号人名段）。
2. **TD 编号人名缩写段**：TD-{人名缩写}-{YYYYMMDD}-{NNN} 中的人名缩写优先取自 `pm_name`。
3. **缺失处理**：`pm_name` 为空或不存在时，按默认行为处理——不做身份假设，无法匹配时追问（如"您说的'我'是指哪位？或请在 PM Profile 中填写 pm_name"）。
4. **边界**：`pm_name` 属于辅助理解配置数据，不是事实源；不得用它覆盖事实源中的 Owner 记录，仅用于身份推导与匹配。
5. **老工作区**：`migrate_workspace.py --create-profile` 创建时 `pm_name` 留空，由用户后续手动填写或 AI 在用户自报姓名时提示补录（SUGGEST，不静默写入）。

## 3. 习惯分类

| 类别编号 | 类别名称 | 捕获内容 | 影响 AI 行为 |
|---|---|---|---|
| P-OUT | 输出格式偏好 | 回复长度（简洁/标准/详细）、结构偏好（表格/列表/段落/混合）、摘要优先级（结论先行/分析先行）、是否每次附建议更新清单 | 调整 AI 输出的格式和结构 |
| P-FOC | 管理关注重点 | 首要关注维度（进度/成本/质量/范围/风险/资源）、风险敏感度（高/中/低）、是否主动提供成本影响分析 | 调整 AI 输出的信息侧重和预警阈值 |
| P-STY | 沟通风格偏好 | 语气（正式/商务/直接）、语言风格（技术向/管理向/混合）、是否每条结论标注置信度和来源、术语使用偏好 | 调整 AI 的表达方式和措辞 |
| P-WRK | 工作流习惯 | 偏好操作顺序（如先查风险再看任务）、日报提交时间习惯、批量处理 vs 逐条确认、是否偏好"只看异常"模式 | 调整 AI 的交互流程和默认行为 |
| P-CFM | 确认行为模式 | 通常接受/拒绝的 AI 建议类型、修改 AI 建议的常见方式、偏好的确认粒度（逐条/批量） | 优化 AI 建议的生成策略和确认交互 |

## 4. 状态机

### 4.1 五状态定义

| 状态 | 含义 | 是否直接应用 |
|---|---|---|
| confirmed | 已确认偏好 | 是 |
| pending | 自动候选，待确认 | 否 |
| rejected | 用户否定 | 否 |
| conflict | 存在多候选冲突 | 否 |
| deprecated | 已废弃/不再使用（仅 PF 行） | 否 |
| disabled | 内置 DF 停用留痕（**仅 DF 行**） | 否（该维度回到 AI 默认行为，行保留可恢复可审计） |

### 4.2 状态流转

- pending → confirmed（用户确认）
- pending → rejected（用户否定）
- rejected → pending（用户恢复）
- confirmed → deprecated（用户废弃 **PF**）
- deprecated → pending（用户恢复 PF）
- confirmed → disabled（用户禁用 **DF**，行保留）
- disabled → confirmed（用户恢复 DF）
- 同一偏好项多候选 → conflict → 用户选择 → confirmed(选中) + deprecated(其余)
- **DF 行禁止** confirmed → deprecated，**禁止物理删除**，**禁止移入 §3 已否决/已废弃段**

### 4.3 数据结构与编号规则

- 编号：两套编号体系互不干扰：
  - 内置默认偏好：`DF-` + 三位数字（DF-001 起，系统预填，见 §5.1a）
  - 用户自定义偏好：`PF-{YYYYMMDD}-{HHmmss}`（秒级时间戳）。**禁止最大编号+1**。同秒冲突兜底：检测到重复则追加两位序号（-02）
- 存量旧编号（PF001 等）保留不改不重编，查询/引用双格式兼容
- 重复时提示冲突，不自动覆盖

## 5. 学习触发条件

### 5.1 置信度判定

| 置信度 | 判定条件 | 动作 |
|---|---|---|
| 用户明确声明 | 用户在当前轮明确表达偏好（如"以后先给结论""以后用简洁格式"） | 直接写入 confirmed，本轮生效 |
| 自动推断高 | 基于上下文可明确推断偏好，且已观察到 ≥3 次一致行为 | 写入 pending，本轮按候选处理，显式标注 |
| 自动推断中 | 存在合理候选但仅观察到 1-2 次行为 | 写入 pending，不应用，在输出中提示候选 |
| 低/多候选冲突 | 无法明确判断，或同一偏好项存在多个候选值 | 不写入正式映射，进入待确认区 |

### 5.1a 内置默认基线（v2.1.0 起；v3.0.0 扩至 DF-016）

内置默认偏好（DF-001~DF-016）预填在 `pm-profile-template.md` §1 偏好映射表，作为 AI 出厂行为基线。**DF 行禁止物理删除、禁止移入 §3**。

| 编号 | 类别 | 偏好项 | 落地位置 |
|---|---|---|---|
| DF-001 | P-OUT | 待确认问题编号罗列 | `00-pm-main-rules.md` CQ-4 强化 |
| DF-002 | P-CFM | 可关闭项确认关闭（编号+佐证+PM 确认） | `04-risk-issue-rules.md` 关闭规则 |
| DF-003 | P-WRK | PM 同步进度自动记日报（白天同步+晚间合并） | `01-daily-report-rules.md` §1.3a |
| DF-004 | P-WRK | 查询必须实读文件 | `00-pm-main-rules.md` CQ-5 强化 |
| DF-005 | P-STY | 禁止内部文件术语（说人话） | PM Profile 层（无规则文件改动） |
| DF-006 | P-STY | 操作建议说人话 | PM Profile 层（无规则文件改动） |
| DF-007 | P-WRK | PM 待办只记本人动作，不自动生成跟进条 | `00-pm-main-rules.md` WF-1（已删 18.6） |
| DF-008 | P-WRK | 日报更新联动待办文件（`todos/{date}/{owner}.md`）与需求登记册、本项目日报；**不要** `tasks/board.md`（v2.0.0 已删） | `01-daily-report-rules.md` §5 |
| DF-009 | P-WRK | 日报核对联动提醒（计划日期/问题/风险对照；紧急项每轮对话提醒一次） | `01-daily-report-rules.md` §6/§7 |
| DF-010 | P-WRK | 日报梳理主动提问（结合风险/问题/计划/里程碑） | `01-daily-report-rules.md` §7 |
| DF-011 | P-OUT | 任务引用必须完整（项目 + 计划 + 名称），禁止缩略写法 | PM Profile 层 |
| DF-012 | P-OUT | 查询默认未办结 | `05-query-rules.md`「待办清单查询输出规范」（规则主导，本行兜底） |
| DF-013 | P-WRK | 日报明确 100% / 「已完成」→ 对应待办自动完成（D-23 白名单，先写后告知级，仍登记 pending） | `00-pm-main-rules.md` §3.3 + `01-daily-report-rules.md` 01 号双轨仲裁 |
| DF-014 | P-WRK | 间接配合人员进出组：有日报=进组/在岗，无日报不按台账卡死离组。判定落点 = 待办文件 **§0.5**。内置值**不要具体人名** | `22-carried-over-rules.md` + 待办模板 §0.5 |
| DF-015 | P-CFM | 一次问完协议 | 本文件 **§5.1b** |
| DF-016 | P-WRK | 非本项目进度不入库 | `01-daily-report-rules.md` §1.0 |

**优先级与覆盖规则**：
- 内置条目（DF-*）优先级：**低于用户明确声明，高于 AI 自动推断**
- 用户可通过「覆盖 DF-xxx：新值」修正（行保留留痕），或「禁用 DF-xxx」将状态置 `disabled`（行保留不生效）
- **废除「废弃 DF-xxx」入口**：不得删除 DF 行，不得将其移入 §3；禁用后该维度回到 AI 默认行为，但 DF 行保留在档可恢复可审计
- 老工作区升级时将缺失的 DF-001~DF-016 补入已有 pm-profile.md §1，**不覆盖**已有同义 PF 条目（备注同义关系，用户偏好优先）

### 5.1b 确认交互协议（一次问完，v3.0.0）

待确认事项必须同一轮一次问完。DF-015 承载本协议；完整规范如下。

**output_shape**：先 1~3 句说已写入什么 → 按类分组列待拍板项 → 末尾给回复模板（如「A1；B2」）。

**clarity_bar**：人不翻上文就能回编号；选项写清选了会改什么。

| 规则 | 名称 | 要求 |
|---|---|---|
| R1 | ask_all_in_one_turn | 同一轮一次问完，禁止拆多轮逐项追问 |
| R2 | grouped_numbered | 按类分组、编号 |
| R3 | item_shape | 每项 = 编号 + 一句话背景 + 2~4 个选项 |
| R4 | auto_skip | 已自动处理项不进确认队列（含 DF-013 自动完成） |
| R5 | batch_legacy | 同类遗留合并成 1 个批次题，不逐条逼问 |
| R6 | parse_and_apply | PM 回「A1；B2」后同轮全部写入，不得只执行第一项 |

**response_parsing**：未回项保持待确认，**不得猜测**；自然语言短答能唯一对应则执行。

**applies_to**：待确认事项、可关闭项、归属判定追问、资源候选、终态确认。
**does_not_apply_to**：纯查询、已按分级表直接落库且无需选项的告知句。

### 5.2 观察维度

- P-OUT：用户是否要求"简洁""详细""用表格""先给结论"
- P-FOC：用户首先关注什么维度？是否经常追问风险/成本？
- P-STY：用户偏好什么语气？技术术语多还是管理语言多？
- P-WRK：用户偏好什么操作顺序？批量还是逐条？
- P-CFM：用户通常直接接受还是修改 AI 建议？偏好什么确认粒度？

### 5.3 不自动写入的情况

- 低置信度/多候选冲突——进入待确认区
- 单次行为不足以推断——不写入，仅记录观察

## 6. 九步学习流程

1. 读取 `pm-profile.md`（如不存在，跳过全部步骤，按默认行为处理）
2. 加载 confirmed 偏好 → 应用到本轮 AI 输出行为
2a. 加载内置默认偏好（DF-001~DF-016）作为兜底基线：当且仅当该维度无其他 confirmed 偏好且该 DF 状态非 `disabled` 时，采用内置值；已有 confirmed 偏好的维度以用户偏好为准。**DF 行缺失** → 从模板恢复该行（状态 `disabled` + 备注「检测到缺失已自动恢复」）并提示 PM，不得静默当作未配置而跳过
3. 加载 pending 偏好 → 作为"候选偏好"附带标注参与本轮交互
4. 在本轮交互中被动观察用户行为
5. 判断是否检测到新的偏好信号
6. 按置信度处理：
   - 用户明确声明 → 直接写入 confirmed，本轮生效
   - 自动推断高（≥3 次一致行为）→ 写入 pending，本轮按候选处理，显式标注
   - 自动推断中（1-2 次行为）→ 写入 pending，不应用，在输出中提示候选
   - 低/冲突 → 不写入，进入待确认区
7. 生成本轮输出（应用 confirmed + 标注 pending）
8. 如有 pending 新增，在输出末尾提示用户确认/修正/否定
9. 保留原文和行为观察记录

## 7. confirmed / pending 应用规则

| 层面 | confirmed | pending | 低置信度 |
|---|---|---|---|
| AI 输出格式 | 直接应用 | 不应用，标注"检测到候选偏好：XXX，待确认" | 不应用 |
| 信息侧重 | 直接应用 | 不应用 | 不应用 |
| 交互风格 | 直接应用 | 不应用 | 不应用 |
| 事实源内容 | **不影响** | **不影响** | **不影响** |
| 安全底线 | **不影响** | **不影响** | **不影响** |
| 主体任务阻塞 | 不阻塞 | 不阻塞 | 不阻塞 |

## 8. 确认交互

### 8.1 用户确认指令

| 指令 | 处理 |
|---|---|
| "确认 PF003" | pending → confirmed，更新 Change Log 和索引 |
| "修正 PF003：XXX" | 更新偏好值，状态改为 confirmed，更新 Change Log 和索引 |
| "否定 PF003" | pending → rejected，不再自动建议，更新 Change Log |
| "恢复 PF003" | rejected → pending，更新 Change Log |
| "废弃 PF003" | confirmed → deprecated，不再应用，更新 Change Log（**仅 PF**；对 DF 不得走本入口） |
| "覆盖 DF-xxx：新值" | 偏好值改写，行保留，留痕备注 |
| "禁用 DF-xxx" | 状态置 `disabled`，行保留不生效；**不得删除、不得移入 §3** |
| "恢复 DF-xxx" | `disabled` → confirmed |
| "以后按这种格式" | 直接写入 confirmed，本轮生效 |
| "我的偏好" / "习惯设置" / "PM Profile" | 输出当前 Profile 全貌（confirmed + pending + rejected + deprecated） |
| "偏好学习" | 同上 |

### 8.2 模糊回复处理

| 用户回复 | 当前轮待确认项数量 | AI 处理方式 |
|---|---|---|
| "确认" | 仅 1 个待确认项 | 默认确认该项 |
| "确认" | 多个待确认项 | 追问"请确认哪一项？如 PF001 或 PF002" |
| "就按第一个" | 有候选列表 | 对应最近的第一个候选 |
| "不是这个" | — | 不直接 rejected，追问"请说明正确的偏好值" |
| "改一下" | — | 追问"请提供修正后的偏好值" |
| 无法理解 | — | 追问"请回复：确认 PF编号 / 修正 PF编号：偏好值 / 否定 PF编号" |

### 8.3 输出格式

#### 偏好应用记录

仅当发生 confirmed 偏好应用或 pending 新增时输出，**无变化时不输出**（硬规则）。

```markdown
## PM 偏好应用

- 已应用偏好：[PF-XXX 偏好项 = 偏好值]（confirmed）
- 候选偏好：[PF-XXX 偏好项 ≈ 候选值]（pending，待确认）
```

#### 偏好学习提示

```markdown
## 偏好学习提示

我在本次交互中观察到以下可能的习惯偏好：

| 编号 | 类别 | 偏好项 | 候选值 | 观察依据 |
|---|---|---|---|---|
| PF001 | P-OUT | 回复长度 | 简洁 | 近 3 次交互均要求"简单说下""别太长""简洁点" |

回复"确认 PF001"采纳，"修正 PF001：XXX"调整，"否定 PF001"忽略。
```

## 9. 与项目规则的冲突处理

### 9.1 优先级

```
Level 0: 平台/系统安全规则（不可覆盖）
Level 1: Skill 核心底线（不可覆盖）
Level 2: 项目级规则（project-rules.md + overrides.md）
Level 2.5: PM Profile confirmed 偏好（软偏好，项目规则未指定时生效）
Level 3: 本次任务运行时指令
Level 4: 用户提供的输入资料
```

### 9.2 冲突规则

- 当 PM Profile confirmed 偏好与项目规则冲突时，**项目规则优先**
- PM Profile 仅在项目规则未指定的维度生效
- 冲突时在输出中提示"检测到偏好 [PF-XXX] 与项目规则 [规则名] 冲突，已按项目规则处理"
- 不阻塞主体任务

## 10. Change Log 与可追溯要求

### 10.1 可追溯

- 每条偏好记录必须有 Source 字段（首次观察的交互内容摘要或用户明确声明）
- 每条偏好记录必须有首次观察时间和最近观察时间
- 每条偏好记录必须有观察次数
- 状态变更必须记录到 Change Log

### 10.2 Change Log 格式

| Date | Change Type | Description | Source |
|---|---|---|---|
| 2026-08-10 | auto-detected | PF001 回复长度=简洁 写入 pending | 日报交互 2026-08-10 |
| 2026-08-10 | confirmed | PF001 由 pending 升为 confirmed | 用户确认 |

### 10.3 索引维护

- 新增、修改、确认、拒绝、废弃后同步更新索引
- 索引按类别和状态双重组织
- 索引与词条表冲突时，以词条表为准

## 11. 异常与降级处理

| 异常场景 | 处理方式 |
|---|---|
| pm-profile.md 不存在 | 跳过加载，按默认行为处理，提示用户可执行迁移命令创建 |
| pm-profile.md 格式损坏 | 提示"PM 偏好档案格式异常，建议检查"，按默认行为处理，不影响现有流程 |
| confirmed 偏好与项目规则冲突 | 项目规则优先，提示冲突但不阻塞 |
| 同一偏好项多个候选值 | 标记 conflict，提示用户选择 |
| pending 偏好被否定 | 状态改为 rejected，不再自动建议，除非用户恢复 |
| 用户从未确认任何偏好 | 按默认行为运行，Profile 为空时不影响任何流程 |
| 偏好文件超过 100 条 | 建议按类别拆分，不自动拆分 |
| 用户行为与 confirmed 偏好不一致 | 不自动降级偏好，用户可手动修改或废弃 |
| 编号重复 | 提示编号冲突，建议修正，不自动覆盖 |
| 索引与词条表不一致 | 以词条表为准，提示重建索引 |
| 旧项目无 Profile 文件 | `migrate_workspace.py --create-profile` 创建 |

## 12. 禁止事项

- pending 偏好不得直接改变 AI 输出行为
- 低置信度不得阻塞主体任务
- PM Profile 不得影响事实源内容
- PM Profile 不得影响安全底线
- PM Profile 不得覆盖项目规则
- 不得将 pending 偏好当作 confirmed 偏好应用
- 不得将待确认问题的推荐默认值视为已确认事实
- 不得删除或弱化现有 Skill 能力
- 不得新增机器配置字段
- 无变化时不得输出偏好应用记录
- 同一偏好项多候选值不得自动选择，必须进入 conflict 追问
- 不得自动拆分 Profile 文件
- 不得在业务子项目目录下创建 PM Profile 文件（业务目录不侵入规则）
- 不得忽略内置默认偏好（DF-*），除非用户明确覆盖或禁用该条目
- 不得将 DF-* 与 PF 编号混编或相互占用（两套编号互不干扰）
- 不得物理删除任何 DF-NNN 行，不得将其移入「§3 已否决/已废弃」段
- 不得将「废弃 DF」理解为删除；须转为覆盖或禁用（`disabled`）
- 新增 PF 禁止「最大编号+1」，须用 `PF-YYYYMMDD-HHmmss`

## 13. 输出示例

### 示例 1：首次使用（Profile 为空）

```
用户：记录一下，今天完成了全链通登录模块的联调

AI：（正常处理日报，按默认格式输出。Profile 为空，无偏好应用。）

AI（末尾追加）：
> 本次交互未检测到新的偏好信号。随着使用次数增加，我将逐步学习您的工作习惯。
```

### 示例 2：检测到偏好信号（第 3 次一致行为）

```
用户：更新一下，风险登记册加了 2 条新风险

AI：（处理更新，观察到用户已连续 3 次要求"简洁回复"）

AI（末尾追加）：
## 偏好学习提示

| 编号 | 类别 | 偏好项 | 候选值 | 观察依据 |
|---|---|---|---|---|
| PF001 | P-OUT | 回复长度 | 简洁 | 近 3 次交互均要求"简单说下""别太长""简洁点" |

回复"确认 PF001"采纳，"修正 PF001：XXX"调整，"否定 PF001"忽略。
```

### 示例 3：用户确认

```
用户：确认 PF001

AI：已确认偏好 PF001（回复长度 = 简洁）。后续交互将默认采用简洁回复格式。
```

### 示例 4：用户明确声明

```
用户：以后给我回复的时候先给结论，再给分析

AI：已记录偏好 PF002（摘要优先级 = 结论先行），状态：confirmed。
后续回复将先给结论再展开分析。
```

### 示例 5：查看 Profile 全貌

```
用户：我的偏好

AI：
## PM 偏好档案

### 已确认偏好（confirmed）
| 编号 | 类别 | 偏好项 | 偏好值 | 观察次数 |
|---|---|---|---|---|
| PF001 | P-OUT | 回复长度 | 简洁 | 3 |
| PF002 | P-OUT | 摘要优先级 | 结论先行 | 1（用户明确声明）|

### 待确认偏好（pending）
（无）

### 已否决偏好（rejected）
（无）
```

### 示例 6：降级运行

```
用户：记录一下，今天完成了模块A的开发
AI：（pm-profile.md 不存在，跳过偏好加载，按默认格式输出）

AI：
> 未检测到 PM 偏好档案。如需启用偏好学习，请执行：
> python scripts/migrate_workspace.py --project-root . --create-profile
> 新工作区初始化时会自动创建偏好档案。
```
